# field_service

./: .codespellrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CovfieFieldSource_8cpp.html  CovfieFieldSource_8cpp__incl.map  CovfieFieldSource_8cpp__incl.md5  CovfieFieldSource_8h.html  CovfieFieldSource_8h__dep__incl.map  CovfieFieldSource_8h__dep__incl.md5  CovfieFieldSource_8h__incl.map  CovfieFieldSource_8h__incl.md5  CovfieFieldSource_8h_source.html  G4MagFieldAdapter_8h.html  G4MagFieldAdapter_8h__incl.map  G4MagFieldAdapter_8h__incl.md5  G4MagFieldAdapter_8h_source.html  IFieldSource_8h.html  IFieldSource_8h__dep__incl.map  IFieldSource_8h__dep__incl.md5  IFieldSource_8h__incl.map  IFieldSource_8h__incl.md5  IFieldSource_8h_source.html  README.md  README_8md.html  REUSE.toml  activate.sh  annotated.html  classes.html  classship_1_1CovfieFieldSource-members.html  classship_1_1CovfieFieldSource.html  classship_1_1CovfieFieldSource__inherit__graph.map  classship_1_1CovfieFieldSource__inherit__graph.md5  classship_1_1G4MagFieldAdapter-members.html  classship_1_1G4MagFieldAdapter.html  classship_1_1G4MagFieldAdapter__coll__graph.map  classship_1_1G4MagFieldAdapter__coll__graph.md5  (+42 more)
.github/: dependabot.yml
.github/workflows/: doxygen.yml  lint.yml  pixi-build.yml
cmake/: SHiPFieldServiceConfig.cmake.in
doxygen/: Doxyfile
include/FieldService/: CovfieFieldSource.h  G4MagFieldAdapter.h  IFieldSource.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  namespaces_0.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js
src/: CovfieFieldSource.cpp
tests/: CMakeLists.txt  test_core_no_geant4.cpp  test_field_source.cpp
tools/: CMakeLists.txt  cvf_to_text.cpp  fairship_to_cvf.cpp  generate_constant_cvf.cpp
